# factoring

./: README.md
backend/: .gitignore  api_sepay.py  create_fi_data.py  docker-compose.yml  migrate_temp.py  pyproject.toml  real_invoice.xml  sample_invoice.xml  sp.py
backend/alembic/: env.py
backend/alembic/versions/: 2863034ab9e9_make_updated_at_nullable.py  29425a472fc3_add_financial_institutions_table.py  2d2037fa59cb_add_closed_to_invoicestatus.py  3404caf0be35_add_status_and_nullable_sepay_id_to_.py  350b5abb2d3d_add_bank_accounts_table.py  39609af6fef7_add_bank_transactions.py  42795e0c3b69_update_invoicestatus_enum.py  597fc70c0c3f_refactor_offer_and_invoicestatus.py  87a6d76130fb_fix_invoicestatus_enum.py  8a7cf38c8eb2_add_offers_table.py  a1878e5d56a1_add_invoice_documents_table.py  a2a9aff11f69_add_kyc_fields_to_sme.py  a77e8e648372_add_invoices_table.py  d65e3bb041c4_add_credit_scores_table.py  eb2be1201491_add_invoices_table.py  f45f4bd4f7b3_add_fi_balance.py  fd964678fbe0_add_rejection_reason_to_user_model.py
backend/app/: main.py
backend/app/core/: config.py  database.py  email.py  security.py  supabase_storage.py  utils.py
backend/app/modules/auth/: models.py  router.py  schemas.py
backend/app/modules/chatbot/: router.py
backend/app/modules/dashboard/: router.py
backend/app/modules/fi/: models.py  router.py  schemas.py
backend/app/modules/invoice/: models.py  parser.py  router.py  schemas.py  services.py
backend/app/modules/payment/: enums.py  models.py  router.py  schemas.py  services.py
backend/app/templates/: factoring_contract.html
(+49 files in other folders)
